fix notification dropdown and icon alignment.

--- a/src/Adstacy/AppBundle/Resources/public/css/adstacy.css
+++ b/src/Adstacy/AppBundle/Resources/public/css/adstacy.css
@@ -18,9 +18,11 @@
 	text-transform: none;
 	line-height: 1;
 	-webkit-font-smoothing: antialiased;
+	text-align: right;
 }
 .icon:before {
-	margin: 0 8px;
+  margin: 0 8px;
+  float: right;
 }
 .icon-home:before {
 	content: "\e000";
