--- a/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
@@ -3,8 +3,8 @@
 
 .notif-count {
   position: absolute;
-  right: -8px;
-  bottom: -4px;
+  right: 4px;
+  top: 8px;
   z-index: 2000;
 }
 
