--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -2,7 +2,7 @@
 @import "../mixins.less";
 
 .nav .open>a, .nav .open>a:hover, .nav .open>a:focus {
-  border-color: inherit;
+  border-color: transparent;
 }
 
 html,
