--- a/src/Adstacy/AppBundle/Resources/public/less/navbar.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/navbar.less
@@ -211,29 +211,29 @@
     line-height: @line-height-computed;
   }
 
-  @media (max-width: @screen-xs-max) {
-    // Dropdowns get custom display when collapsed
-    .open .dropdown-menu {
-      position: static;
-      float: none;
-      width: auto;
-      margin-top: 0;
-      background-color: transparent;
-      border: 0;
-      box-shadow: none;
-      > li > a,
-      .dropdown-header {
-        padding: 5px 15px 5px 25px;
-      }
-      > li > a {
-        line-height: @line-height-computed;
-        &:hover,
-        &:focus {
-          background-image: none;
-        }
-      }
-    }
-  }
+  // @media (max-width: @screen-xs-max) {
+  //   // Dropdowns get custom display when collapsed
+  //   .open .dropdown-menu {
+  //     position: static;
+  //     float: none;
+  //     width: auto;
+  //     margin-top: 0;
+  //     background-color: transparent;
+  //     border: 0;
+  //     box-shadow: none;
+  //     > li > a,
+  //     .dropdown-header {
+  //       padding: 5px 15px 5px 25px;
+  //     }
+  //     > li > a {
+  //       line-height: @line-height-computed;
+  //       &:hover,
+  //       &:focus {
+  //         background-image: none;
+  //       }
+  //     }
+  //   }
+  // }
 
   // Uncollapse the nav
   @media (min-width: @grid-float-breakpoint) {
@@ -577,38 +577,38 @@
       }
     }
 
-    @media (max-width: @screen-xs-max) {
-      // Dropdowns get custom display
-      .open .dropdown-menu {
-        > .dropdown-header {
-          border-color: @navbar-inverse-border;
-        }
-        > li > a {
-          color: @navbar-inverse-link-color;
-          &:hover,
-          &:focus {
-            color: @navbar-inverse-link-hover-color;
-            background-color: @navbar-inverse-link-hover-bg;
-          }
-        }
-        > .active > a {
-          &,
-          &:hover,
-          &:focus {
-            color: @navbar-inverse-link-active-color;
-            background-color: @navbar-inverse-link-active-bg;
-          }
-        }
-        > .disabled > a {
-          &,
-          &:hover,
-          &:focus {
-            color: @navbar-inverse-link-disabled-color;
-            background-color: @navbar-inverse-link-disabled-bg;
-          }
-        }
-      }
-    }
+    // @media (max-width: @screen-xs-max) {
+    //   // Dropdowns get custom display
+    //   .open .dropdown-menu {
+    //     > .dropdown-header {
+    //       border-color: @navbar-inverse-border;
+    //     }
+    //     > li > a {
+    //       color: @navbar-inverse-link-color;
+    //       &:hover,
+    //       &:focus {
+    //         color: @navbar-inverse-link-hover-color;
+    //         background-color: @navbar-inverse-link-hover-bg;
+    //       }
+    //     }
+    //     > .active > a {
+    //       &,
+    //       &:hover,
+    //       &:focus {
+    //         color: @navbar-inverse-link-active-color;
+    //         background-color: @navbar-inverse-link-active-bg;
+    //       }
+    //     }
+    //     > .disabled > a {
+    //       &,
+    //       &:hover,
+    //       &:focus {
+    //         color: @navbar-inverse-link-disabled-color;
+    //         background-color: @navbar-inverse-link-disabled-bg;
+    //       }
+    //     }
+    //   }
+    // }
   }
 
   .navbar-link {
